mongo atlas connection fixes

--- a/views/adminhome.pug
+++ b/views/adminhome.pug
@@ -3,7 +3,7 @@ block content
 
 	.allcontent
 	center
-		h2(style="margin-top: 4rem;") Welcome Admin
+		h2(style="margin-top: 4rem;") Welcome Admin #{fname}
 		p
 			a(href="/user/staffReg" style="font-size: 1.5rem; color: #392600;")
 				| Dashboard
