--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,7 +17,7 @@ html(lang="en")
           span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ml-auto
-            li.nav-item.active
+            li.nav-item
               a.nav-link(href="#")
                 | Home 
                 span.sr-only (current)
